# eeg_eyetracking_parser

./: data2bids_exec.py  eeg_eyetracking_parser.py  pyproject.toml  readme-template.md  readme.md
eeg_eyetracking_parser/: __init__.py  _custom_epochs.py  _data2bids.py  _eeg_preprocessing.py  _parsing.py  _pupil_epochs.py  _time_frequency.py  _triggers.py  braindecode_utils.py
